2011-02-23  Sergio Martin <sergio.martin@artica.es>

	* extensions/update_manager.php
	extensions/update_manager/lib/libupdate_manager_client.php
	extensions/update_manager/lib/libupdate_manager.php
	extensions/update_manager/main.php: Fixed some bugs of the 
	open update manager like connection fail or auth messages, 
	cleaning cache when update to show correct data, etc.

2011-02-23 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* pandora_console/include/functions_db.php: fixed in the function
	"get_agent_modules" extract the agents when the current user user is admin.

2011-02-23  Sergio Martin <sergio.martin@artica.es>

	* include/languages/es.po
	include/languages/es.mo
	include/languages/ja.po
	include/languages/ja.mo: Added seven latest strings
	form launchpad

2011-02-23 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* pandora_console/operation/events/events_list.php: fixed the show html
	entities.

2011-02-23 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/javascript/pandora_modules.js: fixed the disabled button snmp when
	change any parameter of snmp.
	
	Fixes: #3168685

2011-02-23  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_ui.php: Merged from trunk. Call safe_output instead
	  of safe_output_html.

2011-02-03 Javier Lanz <javier.lanz@artica.es>

	* extensions/agents_modules.php: Fixed an error in the header of
	Agent/Module extension

	Fix: #3152681

2011-02-22  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql,
	  DEBIAN/control,
	  DEBIAN/make_deb_package.sh,
	  install.php,
	  pandora_console.spec: Updated version strings.

2011-02-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Added connect_db function
	from update_manager db library to pandora_db

	* extensions/update_manager/sql/update_manager.sql: Changed
	the open update manager server path from 32 to 321

	* extensions/update_manager/lib/db